Fix grid column spilling in containers

--- a/assets/style/modules/_styles.scss
+++ b/assets/style/modules/_styles.scss
@@ -33,18 +33,18 @@
     align-items: center;
 
     @media #{$large-and-up} {
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(4, minmax(0, 1fr));
     }
 
     @media #{$large-and-down} {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(3, minmax(0, 1fr));
     }
 
     @media #{$medium-and-down} {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2, minmax(0, 1fr));
     }
 
     @media #{$small-and-down} {
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: repeat(1, minmax(0, 1fr));
     }
 }
